[gd_scene load_steps=3 format=3 uid="uid://d14wak0stagae"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_gokr3"]
[ext_resource type="PackedScene" uid="uid://bj4lh4ckm0iwb" path="res://scenes/transition_screen.tscn" id="2_1cjia"]

[node name="MainMenu" type="Control"]
auto_translate_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gokr3")

[node name="Root" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="Root"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Root/Center"]
auto_translate_mode = 1
layout_mode = 2

[node name="Play" type="Button" parent="Root/Center/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Play"

[node name="Settings" type="Button" parent="Root/Center/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Settings"

[node name="Quit" type="Button" parent="Root/Center/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Quit"

[node name="SettingsList" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="SettingsList"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsList/Center"]
auto_translate_mode = 1
layout_mode = 2

[node name="Slot1" type="Button" parent="SettingsList/Center/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Setting 1"

[node name="Slot2" type="Button" parent="SettingsList/Center/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Slot 2"

[node name="Slot3" type="Button" parent="SettingsList/Center/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Slot 3"

[node name="Back" type="Button" parent="SettingsList"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = -1
anchor_top = 0.878
anchor_right = 0.2
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 64.0
offset_right = 64.0
offset_bottom = -64.0
grow_vertical = 0
theme_override_font_sizes/font_size = 128
text = "Back"

[node name="Background" type="ColorRect" parent="."]
auto_translate_mode = 1
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.47, 0.30879, 0.2397, 1)

[node name="TransitionScreen" parent="." instance=ExtResource("2_1cjia")]
visible = false
modulate = Color(1, 1, 1, 1)
position = Vector2(800, 450)

[node name="Title" type="Label" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -480.0
offset_right = 480.0
offset_bottom = 203.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 256
text = "Polygon Factory"

[connection signal="pressed" from="Root/Center/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Root/Center/VBoxContainer/Play" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Root/Center/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsList/Back" to="." method="_on_back_pressed"]
